<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tabButtonCon"
    android:background="@drawable/box_shaow"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/phoneBookText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/phone_book"
        android:textColor="#a9a9a9"
        android:textSize="12sp"/>


    <TextView
        android:id="@+id/labText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/lab"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/groupsText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/groups"
        android:textColor="#a9a9a9"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/directoryText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:text="@string/directory"
        android:textColor="#a9a9a9"
        android:textSize="14sp" />



</LinearLayout>
