<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ededed"
    android:paddingTop="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:id="@+id/hideKeyboard"
        android:paddingStart="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/recommend"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/sLab_btn"
                android:fontFamily="@font/montserrat"
                android:minWidth="110dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/left_active_toggle_btn_background"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/share_to_lab"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="13dp"
                />

            <Button
                android:id="@+id/sGroup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/right_toggle_btn_background"
                android:minWidth="110dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/share_to_group"
                android:fontFamily="@font/montserrat"
                android:textAllCaps="false"
                android:textColor="@color/fontColor"
                android:textSize="13dp"
                />

   </LinearLayout>

        <EditText
            android:id="@+id/recName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/recEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/recPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:autofillHints="" />
        <EditText
            android:id="@+id/recOccupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:ems="10"
            android:hint="Business"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/recWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:ems="10"
            android:hint="@string/website"
            android:inputType="text"
            android:autofillHints="" />
        <EditText
            android:id="@+id/recAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:visibility="gone"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:autofillHints="" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:background="@color/defaultBorderFlagColor"
            android:id="@+id/cardView"
            >
            <fragment
                android:tag="customtag"
                android:id="@+id/location_autocomplete_fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/underline"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:ems="10"/>
        <EditText
            android:id="@+id/recDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Review"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:autofillHints="" />
        <com.rekortech.android.ExpandedHeightGridView
            android:id="@+id/recImgCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:isScrollContainer="false"
            android:minHeight="110dp"
            android:numColumns="5"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />


        <Button
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7.5dp"
            android:background="@drawable/groups_background"
            android:drawableTop="@drawable/image_uploasd"
            android:paddingLeft="8sp"
            android:paddingTop="12sp"
            android:paddingRight="8sp"
            android:paddingBottom="5sp"
            android:text="@string/upload_image_txt"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/groupsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:visibility="gone"
            android:entries="@array/entry"/>

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:text="@string/your_rating"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <RatingBar
            android:id="@+id/recRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:stepSize="0.1"
            android:numStars="5"
            android:outlineAmbientShadowColor="#ffffff"
            android:theme="@style/RatingBar"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/closeRecDialogue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@id/shareRecProfile"
                android:layout_toLeftOf="@id/shareRecProfile"
                android:background="@drawable/black_btn_background"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/shareRecProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/black_btn_background"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>