<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ededed"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="15dp"
    android:paddingEnd="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:textColor="@color/colorAccent"-->
<!--            android:textSize="24sp" />-->

        <TextView
            android:id="@+id/confirmationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:text="@string/are_you_sure_txt"
            android:textColor="@color/fontColor"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/closeConfirmationModal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/no"
                android:textAllCaps="false"
                android:background="@drawable/black_btn_background"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/closeConfirmationModal"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:layout_marginEnd="10dp"
                android:background="@drawable/black_btn_background"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>